--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Polyglot Workflows 101 - Brought to you by Polyglot</title>
+    <title>Advanced Data Structures 101 - Brought to you by BeaCoder</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" media="screen" href="reset.css">
@@ -21,7 +21,7 @@
 
   <body>
     <header id="header">
-      <a href="index.html" id="home_link">Polyglot Workflows 101</a>
+      <a href="index.html" id="home_link">Advanced Data Structures 101</a>
       <nav>
         <ul>
           <li class="arrow next">
