--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
   <body>
     <header id="header">
-      <a href="index.html" id="home_link">Advanced Data Structures 101</a>
+      <a href="index.html" id="home_link">Polyglot Workflows 101</a>
       <nav>
         <ul>
           <li class="arrow next">
