--- a/src/index.html
+++ b/src/index.html
@@ -34,14 +34,13 @@
     <div id="homepage">
       <div id="border_left">
         <div id="intro">
-          <p>Polyglot Workflows 101</p>
-          <p><em>Polyglot Workflows 101 is a guided tour that walks through installing the tools you will
-          need to start with Polyglot, and learn the workflow you will follow as you proceed in the course.</em></p>
+          <p>Python 101</p>
+          <p><em>Python 101 introduces data types and data structures, variables, operators, and control flow within python</em></p>
         </div>
         <div id="license">
           <h1>LICENSE <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png"/></a></h1>
           <p>
-            PolyglotWorkflows101 is released under
+            Python 101 is released under
             a <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative
               Commons, Attribution-NonCommercial-ShareAlike</a> License.
           </p>
