--- a/lab_04.html
+++ b/lab_04.html
@@ -178,8 +178,9 @@
 <p>5. What is the result of <code>3 == 3 and 4 == 4</code>?</p>
 <p>6. What is the result of <code>3 == 2 and 4 == 4</code>?</p>
 <p>7. What is the difference <code>between = and ==</code>?</p>
-<p>8. What is the result of <code>false != @false</code>?</p>
-<p>9. What is the difference between <code>and</code> and <code>or</code>? Give an example that shows the difference</p>
+<p>8. What is the result of <code>false != false</code>?</p>
+<p>9. What is the result of <code>false != true</code>?</p>
+<p>10. What is the difference between <code>and</code> and <code>or</code>? Give an example that shows the difference</p>
         <nav class="foot-navigation">
       <a href="lab_03.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
