--- a/lab_02.html
+++ b/lab_02.html
@@ -138,7 +138,7 @@ This is the second value returned b<br />
 <p>1. Create a file called <code>lecture_00_lab02_variables.py</code></p>
 <p>2. Create variables for your first name, last name, your school, your favorite number, and your favorite color!</p>
 <p>3. Return the string &#8220;42&#8221; by adding <span class="caps">TWO</span> strings together. Do not just give <code>forty_two = "42"</code></p>
-<p>4. Return the integer value 5 by using addition, subtraction, and division</p>
+<p>4. Return the integer value 5 by writing one formula that uses addition, subtraction, and division</p>
         <nav class="foot-navigation">
       <a href="lab_01.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
