--- a/lab_03.html
+++ b/lab_03.html
@@ -120,8 +120,8 @@ print("y: {}, address: {}".format(str(y), str(id(y))))
 <h3><b>Output:</b></h3>
 <pre class="sample">
 <div class="sample_command">$ python immutable.py</div>
-<p>x: 6, address: 140187988437184<br />
-y: 5, address: 140187988437208<br />
+<p>x: 6, address: 140465592641728<br />
+y: 5, address: 140465592641752<br />
 </pre></p>
 <p>You notice that if we do an operation to x, it does not affect y and the addresses of the objects are different!</p>
 <h3 class="file-heading"><em>mutable.py</em></h3>
@@ -139,8 +139,8 @@ print("y: {}, address: {}".format(str(y), str(id(y))))
 <h3><b>Output:</b></h3>
 <pre class="sample">
 <div class="sample_command">$ python mutable.py</div>
-<p>x: [&#8216;kevin&#8217;, &#8216;james&#8217;, &#8216;tim&#8217;, &#8216;rose&#8217;], address: 4405750456<br />
-y: [&#8216;kevin&#8217;, &#8216;james&#8217;, &#8216;tim&#8217;, &#8216;rose&#8217;], address: 4405750456<br />
+<p>x: [&#8216;kevin&#8217;, &#8216;james&#8217;, &#8216;tim&#8217;, &#8216;rose&#8217;], address: 4449639096<br />
+y: [&#8216;kevin&#8217;, &#8216;james&#8217;, &#8216;tim&#8217;, &#8216;rose&#8217;], address: 4449639096<br />
 </pre></p>
 <p>You&#8217;ll now notice that even if we modify x, y is affected</p>
 <p>Why does this happen?</p>
@@ -161,26 +161,26 @@ y: [&#8216;kevin&#8217;, &#8216;james&#8217;, &#8216;tim&#8217;, &#8216;rose&#82
 <p>2. You want to get all the unique words in an essay. What composite data structure is best for this?</p>
 <p>3. You run a fast-food restaurant. What data structure is best to use to store all the orders coming in?</p>
 <p>4.  How much money does sam have?</p>
-<h3 class="file-heading"><em>written_q.py</em></h3>
+<h3 class="file-heading"><em>written_q0.py</em></h3>
 <pre class="file">
 bank = {
   'sam': {
-    'money': 500
+    'savings': 500
   }
 }
 
-bank['sam']['money'] == 200
+bank['sam']['savings'] == 200
 </pre>
-<p>5.  How much money does sam have?</p>
-<h3 class="file-heading"><em>written_q.py</em></h3>
+<p>5.  How much savings does sam have?</p>
+<h3 class="file-heading"><em>written_q1.py</em></h3>
 <pre class="file">
 bank = {
   'sam': {
-    'money': 500
+    'savings': 500
   }
 }
 
-bank['sam']['money'] = 200
+bank['sam']['savings'] = 200
 </pre>
 <h2>Coding Exercises</h2>
 <p>1. Create a file within lectures called <code>lecture_00_lab_03_data_types_and_structures.py</code></p>
