--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Polyglot Workflows 101</title>
+    <title>Python 101</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
@@ -25,8 +25,7 @@
   <body id="index_body" class="animation-fade-in">
     <h1>Python 101</h1>
 
-    <p><em>Polyglot Workflows 101 is a guided tour that walks through installing the tools you will
-    need to start with Polyglot, and learn the workflow you will follow as you proceed in the course</em></p>
+    <p><em>Python 101 introduces data types and data structures, variables, operators, and control flow within python</em></p>
 
     <hr>
 
