--- a/lab_04.html
+++ b/lab_04.html
@@ -178,7 +178,7 @@
 <p>5. What is the result of <code>3 == 3 and 4 == 4</code>?</p>
 <p>6. What is the result of <code>3 == 2 and 4 == 4</code>?</p>
 <p>7. What is the difference <code>between = and ==</code>?</p>
-<p>8. What is the result of <code>false != @false</code>?</p>
+<p>8. What is the result of <code>false != false</code>?</p>
 <p>9. What is the difference between <code>and</code> and <code>or</code>? Give an example that shows the difference</p>
         <nav class="foot-navigation">
       <a href="lab_03.html">
