--- a/lab_01.html
+++ b/lab_01.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lab 1 - Python 101</title>
+    <title>Lab 1 - Python 102</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
@@ -31,87 +31,89 @@
     <div class="layout">
       <div id="index">
         <p class="link-home">
-          <a href="index.html"><span>Python 101</span></a>
+          <a href="index.html"><span>Python 102</span></a>
         </p>
         <button class="link-menu">Menu</button>
         <nav tabindex="0">
           <ol>
-              <li id="lab_1_link"><a href="lab_01.html">Top Down</a></li>
-  <li id="lab_2_link"><a href="lab_02.html">Variables</a></li>
-  <li id="lab_3_link"><a href="lab_03.html">Data types and Data Structures</a></li>
-  <li id="lab_4_link"><a href="lab_04.html">Operators</a></li>
-  <li id="lab_5_link"><a href="lab_05.html">Quiz 00</a></li>
-  <li id="lab_6_link"><a href="lab_06.html">Homework Assignment 00</a></li>
+              <li id="lab_1_link"><a href="lab_01.html">If statement</a></li>
+  <li id="lab_2_link"><a href="lab_02.html">Iterating</a></li>
+  <li id="lab_3_link"><a href="lab_03.html">File I/O</a></li>
+  <li id="lab_4_link"><a href="lab_04.html">Quiz 01</a></li>
+  <li id="lab_5_link"><a href="lab_05.html">Homework Assignment 01</a></li>
 
           </ol>
         </nav>
       </div>
 
       <div id="content" tabindex="-1">
-        <h1 class="lab_title"><em>lab 1</em>  Top Down</h1>
+        <h1 class="lab_title"><em>lab 1</em>  If statement</h1>
 <h2>Goals</h2>
 <ul>
-	<li>Understand how code can be used in a real application</li>
+	<li>To understand the anatomy of an if statement</li>
+	<li>Write your own simple if statement, and nested if statements</li>
 </ul>
-<h2>Stare at this code for a couple of minutes</h2>
-<h3 class="file-heading"><em>user.py</em></h3>
-<pre class="file">import datetime # this is how we import methods / functions from other places
+<h2>Simple if statement</h2>
+<p>Try to predict what this file will output</p>
+<h3 class="file-heading"><em>simple_if.py</em></h3>
+<pre class="file">a = 10
+b = 5
 
-# Here is a class
-class User:
-  def __init__(self, name, lastname, password, birthday, address, telephone, hobbies, email):
-    self.name = name
-    self.lastname = lastname
-    self.password = password
-    self.birthday = birthday
-    self.address = address
-    self.telephone = telephone
-    self.hobbies = hobbies
-    self.email = email
-
-  def get_age(self):
-    # Get today's date
-    today = datetime.datetime.today()
-    age = today.year - self.birthday.year
-
-    return age
-
-  def change_password(self, new_password):
-    if len(new_password) &lt; 6:
-      raise ValueError('New password cannot contain less than 6 characters')
-
-    self.password  = new_password
-
-  def add_hobby(self, hobby):
-    self.hobbies.append(hobby)
-
-# Here is how to "instantiate" a class
-
-bob = User(
-  "bob",
-  "jones",
-  "supersecretpassword",
-  datetime.date(1992, 3, 12),
-  "450 SW Marine Drive",
-  "604 123 4567",
-  ["basketball", "baking"],
-  "bob.jones@gmail.com"
-)
-
-print("Bob's age: {}".format(bob.get_age()))
-print("Bob's original password {}".format(bob.password))
-bob.change_password("newpassword")
-print("Bob's new password {}".format(bob.password))
+if a &gt; b:
+  print("a is greater than b")
+elif a == b:
+  print("a is equal to b")
+else:
+  print("a is less than b")
 </pre>
 <h3><b>Execute:</b></h3>
-<pre class="instructions">python user.py</pre>
+<pre class="instructions">python simple_if.py</pre>
 <h3><b>Output:</b></h3>
 <pre class="sample">
-<div class="sample_command">$ python user.py</div>
-<p>Bob&#8217;s age: 27<br />
-Bob&#8217;s original password supersecretpassword<br />
-Bob&#8217;s new password newpassword<br />
+<div class="sample_command">$ python simple_if.py</div>
+<p>a is greater than b<br />
 </pre></p>
+<h2>Nested if statement</h2>
+<p>Try to predict what this file will output</p>
+<h3 class="file-heading"><em>nested_if.py</em></h3>
+<pre class="file">a = 10
+b = 5
+
+if a &gt; b:
+  print("a is greater than b")
+  if a + b == 15:
+    print("a + b is 15")
+  else:
+    print("a + b is not 15")
+elif a == b:
+  print("a is equal to b")
+else:
+  print("a is less than b")
+</pre>
+<h3><b>Execute:</b></h3>
+<pre class="instructions">python nested_if.py</pre>
+<h3><b>Output:</b></h3>
+<pre class="sample">
+<div class="sample_command">$ python nested_if.py</div>
+<p>a is greater than b<br />
+a + b is 15<br />
+</pre></p>
+<h2>Coding Exercises</h2>
+<p>Remember to add, commit, and push the file to your own forked repo!</p>
+<p>1. Create a file called <code>lecture01_lab02_if_statements.py</code></p>
+<p>2.</p>
+<p>Customers are charged a basic highway entrance fee of $2.50 per trip</p>
+<p>There are 3 travel zones on the highway.</p>
+<ul>
+	<li>Zone 1: from km marker 0 to km marker 30</li>
+	<li>Zone 2: from km marker 31 to marker 60</li>
+	<li>Zone 3: from km marker 61 to marker 90</li>
+</ul>
+<p>Light vehicles are charged at a rate of 12 cents per km. Heavy vehicles are charged 15 cents per km.</p>
+<p>There is a 20% surcharge to travel in Zone 2.</p>
+<p>Code this up using if statements and variables.</p>
+<p>If marker is 31, and a heavy vehicle is used, expect to pay $8.08</p>
+<p>3. Add, commit, and push up code. (<span class="caps">REQUIRED</span>)</p>
         <nav class="foot-navigation">
   
     <span></span>
