--- a/lab_02.html
+++ b/lab_02.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lab 2 - Python 101</title>
+    <title>Lab 2 - Python 102</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
@@ -31,114 +31,150 @@
     <div class="layout">
       <div id="index">
         <p class="link-home">
-          <a href="index.html"><span>Python 101</span></a>
+          <a href="index.html"><span>Python 102</span></a>
         </p>
         <button class="link-menu">Menu</button>
         <nav tabindex="0">
           <ol>
-              <li id="lab_1_link"><a href="lab_01.html">Top Down</a></li>
-  <li id="lab_2_link"><a href="lab_02.html">Variables</a></li>
-  <li id="lab_3_link"><a href="lab_03.html">Data types and Data Structures</a></li>
-  <li id="lab_4_link"><a href="lab_04.html">Operators</a></li>
-  <li id="lab_5_link"><a href="lab_05.html">Quiz 00</a></li>
-  <li id="lab_6_link"><a href="lab_06.html">Homework Assignment 00</a></li>
+              <li id="lab_1_link"><a href="lab_01.html">If statement</a></li>
+  <li id="lab_2_link"><a href="lab_02.html">Iterating</a></li>
+  <li id="lab_3_link"><a href="lab_03.html">File I/O</a></li>
+  <li id="lab_4_link"><a href="lab_04.html">Quiz 01</a></li>
+  <li id="lab_5_link"><a href="lab_05.html">Homework Assignment 01</a></li>
 
           </ol>
         </nav>
       </div>
 
       <div id="content" tabindex="-1">
-        <h1 class="lab_title"><em>lab 2</em>  Variables</h1>
+        <h1 class="lab_title"><em>lab 2</em>  Iterating</h1>
 <h2>Goals</h2>
 <ul>
-	<li>Start creating your own variables</li>
-	<li>Understand what variables are</li>
+	<li>Learn about for loops and while loops</li>
 </ul>
-<h2>A variable is a value that can change</h2>
-<p>Try to predict what lucy would be on each print</p>
-<h3 class="file-heading"><em>variables.py</em></h3>
-<pre class="file">lucy = 10 + 2 - 1
-print("lucy variable value: {}".format(lucy))
-lucy = 13 + 2 - 1
-print("lucy variable value: {}".format(lucy))
-</pre>
-<h3><b>Execute:</b></h3>
-<pre class="instructions">python variables.py</pre>
-<h3><b>Output:</b></h3>
-<pre class="sample">
-<div class="sample_command">$ python variables.py</div>
-<p>lucy variable value: 11<br />
-lucy variable value: 14<br />
-</pre></p>
-<h2>Python has untyped variables</h2>
-<ul>
-	<li>In python, variables can be of <span class="caps">ANY</span> type and you don&#8217;t have to declare it.</li>
-</ul>
-<p>This is what it looks like in C / C++, where you have to declare the type of variable</p>
-<h3 class="file-heading"><em>typed_variables.h</em></h3>
-<pre class="file">int lucy = 1;
-string colm = "Hello";
-float morsal = 3.705;
-</pre>
-<p>This is what it looks like in python</p>
-<h3 class="file-heading"><em>untyped_variables.py</em></h3>
-<pre class="file">lucy = 1
-colm = "Hello"
-morsal = 3.705
-</pre>
-<h2>Unlike normal math equations, the &#8220;conclusion&#8221; is on the left side</h2>
-<p>In math we do something like <code>1 + 2 + 3 = answer</code> in programming however, we set the answer to the equation. <code>answer = 1 + 2 + 3</code> The lefthand side almost always contains only one word.</p>
-<h2>Name of the variable does not matter</h2>
-<p>A common mistake people often make is thinking that the name of the variable matters. it does not.</p>
-<h3 class="file-heading"><em>name_does_not_matter.py</em></h3>
-<pre class="file">harry = 1.385
-one = "Harry"
-</pre>
-<p>Run this file and you will see that it won&#8217;t throw any errors</p>
-<h3><b>Execute:</b></h3>
-<pre class="instructions">python name_does_not_matter.py</pre>
-<h3><b>Output:</b></h3>
-<pre class="sample">
-<div class="sample_command">$ python name_does_not_matter.py</div>
-<p></pre></p>
-<p>Another common mistake people make is thinking that there has to be quotation marks to variables. Variables never have quotation marks. They aren&#8217;t strings! Their value could be strings, but they are not.</p>
-<h3 class="file-heading"><em>quotation_marks_around_vars.py</em></h3>
-<pre class="file">"one" = "Harry"
-</pre>
-<h3><b>Execute:</b></h3>
-<pre class="instructions">python quotation_marks_around_vars.py</pre>
-<h3><b>Output:</b></h3>
-<pre class="sample">
-<div class="sample_command">$ python quotation_marks_around_vars.py</div>
-File &#8220;quotation_marks_around_vars.py&#8221;, line 1
-&#8220;one&#8221; = &#8220;Harry&#8221;
-<p>SyntaxError: can&#8217;t assign to literal<br />
-</pre></p>
-<h2>Advanced: Return multiple values in python.</h2>
-<p>Python is quite unique in that you can make two variables equal to two statements. An example of this would be a function that returns two values.</p>
-<h3 class="file-heading"><em>return_two_values.py</em></h3>
-<pre class="file">def fn_return_two():
-  return "a", "b"
+<h2>Overview</h2>
+<p>A for loop is used for iterating over a sequence (that is either a list, a tuple, a dictionary, a set, or a string)</p>
+<p>Here are a couple of for loops in action</p>
+<h2>Iterating by item with a for loop</h2>
+<h3 class="file-heading"><em>by_item.py</em></h3>
+<pre class="file">fruits = ["apple", "banana", "cherry"]
 
-str_1, str_2 = fn_return_two()
-
-print("This is the first value returned {}".format(str_1))
-print("This is the second value returned {}".format(str_2))
+for x in fruits:
+  print(x)
 </pre>
 <h3><b>Execute:</b></h3>
-<pre class="instructions">python return_two_values.py</pre>
+<pre class="instructions">python by_item.py</pre>
 <h3><b>Output:</b></h3>
 <pre class="sample">
-<div class="sample_command">$ python return_two_values.py</div>
-<p>This is the first value returned a<br />
-This is the second value returned b<br />
+<div class="sample_command">$ python by_item.py</div>
+<p>apple<br />
+banana<br />
+cherry<br />
 </pre></p>
+<h2>Iterate via index with a for loop</h2>
+<p>Another useful way to iterate over items is via their index. Say that we only wanted to iterate over the first 2 words</p>
+<h3 class="file-heading"><em>by_range.py</em></h3>
+<pre class="file">fruits = ["apple", "banana", "cherry"]
+
+for i in range(0,2):
+  print(fruits[i])
+</pre>
+<h3><b>Execute:</b></h3>
+<pre class="instructions">python by_range.py</pre>
+<h3><b>Output:</b></h3>
+<pre class="sample">
+<div class="sample_command">$ python by_range.py</div>
+<p>apple<br />
+banana<br />
+</pre></p>
+<p>Now by_range.py is equivalent to</p>
+<h3 class="file-heading"><em>clone_list.py</em></h3>
+<pre class="file">fruits = ["apple", "banana", "cherry"]
+first_two = fruits[:2]
+
+for x in first_two:
+  print(x)
+</pre>
+<h3><b>Execute:</b></h3>
+<pre class="instructions">python clone_list.py</pre>
+<h3><b>Output:</b></h3>
+<pre class="sample">
+<div class="sample_command">$ python clone_list.py</div>
+<p>apple<br />
+banana<br />
+</pre></p>
+<p>However, <code>by_range.py</code> is more ideal because it takes up less memory as it doesn&#8217;t have to allocate more space for a cloned list</p>
+<h2>Iterating with a while loop</h2>
+<h3 class="file-heading"><em>while_loop.py</em></h3>
+<pre class="file">countdown = 10
+
+while (countdown &gt; 0):
+  print(countdown)
+  countdown -= 1
+
+print("HAPPY NEW YEAR!")
+</pre>
+<h3><b>Execute:</b></h3>
+<pre class="instructions">python while_loop.py</pre>
+<h3><b>Output:</b></h3>
+<pre class="sample">
+<div class="sample_command">$ python while_loop.py</div>
+<p>10<br />
+9<br />
+8<br />
+7<br />
+6<br />
+5<br />
+4<br />
+3<br />
+2<br />
+1<br />
+<span class="caps">HAPPY</span> <span class="caps">NEW</span> <span class="caps">YEAR</span>!<br />
+</pre></p>
+<h2>Advanced: List iteration</h2>
+<p>To create a new list in one line, use list iterators</p>
+<h3 class="file-heading"><em>one_line.py</em></h3>
+<pre class="file">fruits = ["apple", "banana", "cherry"]
+
+# Via item
+
+# List iterator
+uppercased_list = [x.upper() for x in fruits]
+
+# Which is equivalent to this for loop
+uppercased_list = []
+for x in fruits:
+  uppercased_list.append(x.upper())
+
+# Via index
+
+# List iterator
+uppercased_list_via_index = [fruits[i].upper() for i in range(0, 2)]
+
+# For loop
+uppercased_list_via_index = []
+for i in range(0,2):
+  uppercased_list_via_index.append(fruits[i].upper())
+</pre>
 <h2>Coding Exercises</h2>
 <p>Remember to add, commit, and push the file to your own forked repo!</p>
-<p>1. Create a file called <code>lecture_00_lab02_variables.py</code></p>
-<p>2. Create variables for your first name, last name, your school, your favorite number, and your favorite color!</p>
-<p>3. Return the string &#8220;42&#8221; by adding <span class="caps">TWO</span> strings together. Do not just give <code>forty_two = "42"</code></p>
-<p>4. Return the integer value 5 by writing one formula that uses addition, subtraction, and division</p>
+<p>1. Create a file called <code>lecture01_lab02_iterating.py</code></p>
+<p>2. Write a program that checks the validity of a password. You can &#8220;hardcode&#8221; the password by setting the variable to any password you like. Print out &#8220;valid&#8221; if valid, and &#8220;invalid&#8221; if invalid</p>
+<ul>
+	<li>The length must be greater than 6 and less than 12</li>
+	<li>At least 1 letter between [a-z] and 1 letter between [A-Z].</li>
+	<li>At least 1 number between [0-9].</li>
+	<li>At least 1 character from [$#@].</li>
+</ul>
+<p>3. Write a program that prints the numbers from 1 to 20. But for multiples of three print “Fizz” instead of the number and for the multiples of five print “Buzz”. For numbers which are multiples of both three and five print “FizzBuzz”.</p>
+<p>4.</p>
+<p>Here is a list of sentences:<br />
+<code>['great day today', 'horrible weather tomorrow', 'cool story bro']</code></p>
+<p>Here is a set of good words:<br />
+<code>{'great', 'good', 'cool', 'fantastic'}</code></p>
+<p>Here is a set of bad words:<br />
+<code>{'bad', 'sad', 'horrible'}</code></p>
+<p>Count the number of good words in each sentence and bad words, and print out which one is greater in umber</p>
         <nav class="foot-navigation">
       <a href="lab_01.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
