--- a/lab_06.html
+++ b/lab_06.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lab 6 - Python 101</title>
+    <title>Lab 6 - Python 102</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
@@ -31,25 +31,25 @@
     <div class="layout">
       <div id="index">
         <p class="link-home">
-          <a href="index.html"><span>Python 101</span></a>
+          <a href="index.html"><span>Python 102</span></a>
         </p>
         <button class="link-menu">Menu</button>
         <nav tabindex="0">
           <ol>
-              <li id="lab_1_link"><a href="lab_01.html">Top Down</a></li>
-  <li id="lab_2_link"><a href="lab_02.html">Variables</a></li>
-  <li id="lab_3_link"><a href="lab_03.html">Data types and Data Structures</a></li>
-  <li id="lab_4_link"><a href="lab_04.html">Operators</a></li>
-  <li id="lab_5_link"><a href="lab_05.html">Quiz 00</a></li>
-  <li id="lab_6_link"><a href="lab_06.html">Homework Assignment 00</a></li>
+              <li id="lab_1_link"><a href="lab_01.html">Project</a></li>
+  <li id="lab_2_link"><a href="lab_02.html">If statement</a></li>
+  <li id="lab_3_link"><a href="lab_03.html">Iterating</a></li>
+  <li id="lab_4_link"><a href="lab_04.html">File I/O</a></li>
+  <li id="lab_5_link"><a href="lab_05.html">Quiz 01</a></li>
+  <li id="lab_6_link"><a href="lab_06.html">Homework Assignment 01</a></li>
 
           </ol>
         </nav>
       </div>
 
       <div id="content" tabindex="-1">
-        <h1 class="lab_title"><em>lab 6</em>  Homework Assignment 00</h1>
-<p>1. Open up <code>ha_00_python101.ipynb</code> and finish by next class</p>
+        <h1 class="lab_title"><em>lab 6</em>  Homework Assignment 01</h1>
+<p>1. Open up <code>ha_00_controlflow101.ipynb</code> and finish by next class</p>
         <nav class="foot-navigation">
       <a href="lab_05.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
