Updated docs to 2d70937

--- a/lab_02.html
+++ b/lab_02.html
@@ -131,8 +131,8 @@ print("HAPPY NEW YEAR!")
 1<br />
 <span class="caps">HAPPY</span> <span class="caps">NEW</span> <span class="caps">YEAR</span>!<br />
 </pre></p>
-<h2>Advanced: List iteration</h2>
-<p>To create a new list in one line, use list iterators</p>
+<h2>Advanced: List comprehension</h2>
+<p>To create a new list in one line, use list comprehension</p>
 <h3 class="file-heading"><em>one_line.py</em></h3>
 <pre class="file">fruits = ["apple", "banana", "cherry"]
 
@@ -158,7 +158,7 @@ for i in range(0,2):
 </pre>
 <h2>Coding Exercises</h2>
 <p>Remember to add, commit, and push the file to your own forked repo!</p>
-<p>1. Create a file called <code>lecture01_lab02_iterating.py</code></p>
+<p>1. Create a file called <code>lecture_01_lab_02_iterating.py</code></p>
 <p>2. Write a program that checks the validity of a password. You can &#8220;hardcode&#8221; the password by setting the variable to any password you like. Print out &#8220;valid&#8221; if valid, and &#8220;invalid&#8221; if invalid</p>
 <ul>
 	<li>The length must be greater than 6 and less than 12</li>
@@ -174,7 +174,8 @@ for i in range(0,2):
 <code>{'great', 'good', 'cool', 'fantastic'}</code></p>
 <p>Here is a set of bad words:<br />
 <code>{'bad', 'sad', 'horrible'}</code></p>
-<p>Count the number of good words in each sentence and bad words, and print out which one is greater in umber</p>
+<p>Count the number of good words in each sentence and bad words, and print out which one is greater in number</p>
+<p>5. Add, commit, and push up code. (<span class="caps">REQUIRED</span>)</p>
         <nav class="foot-navigation">
       <a href="lab_01.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
