--- a/lab_04.html
+++ b/lab_04.html
@@ -52,7 +52,7 @@
 <h3><b>Execute:</b></h3>
 <pre class="instructions">cd ~/Development/polyglot/cohort-1/quizzes</pre>
 <pre class="instructions">jupyter notebook</pre>
-<p>2. Open up <code>quiz_01_controlflow101.ipynb</code> and begin</p>
+<p>2. Open up <code>quiz_01_python102.ipynb</code> and begin</p>
         <nav class="foot-navigation">
       <a href="lab_03.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
