Updated docs to 266074a

--- a/lab_02.html
+++ b/lab_02.html
@@ -50,7 +50,7 @@
         <h1 class="lab_title"><em>lab 2</em>  Iterating</h1>
 <h2>Goals</h2>
 <ul>
-	<li>Learn about for loops and while loops</li>
+	<li>Understand for loops / nested for loops</li>
 </ul>
 <h2>Overview</h2>
 <p>A for loop is used for iterating over a sequence (that is either a list, a tuple, a dictionary, a set, or a string)</p>
@@ -104,33 +104,6 @@ for x in first_two:
 banana<br />
 </pre></p>
 <p>However, <code>by_range.py</code> is more ideal because it takes up less memory as it doesn&#8217;t have to allocate more space for a cloned list</p>
-<h2>Iterating with a while loop</h2>
-<h3 class="file-heading"><em>while_loop.py</em></h3>
-<pre class="file">countdown = 10
-
-while (countdown &gt; 0):
-  print(countdown)
-  countdown -= 1
-
-print("HAPPY NEW YEAR!")
-</pre>
-<h3><b>Execute:</b></h3>
-<pre class="instructions">python while_loop.py</pre>
-<h3><b>Output:</b></h3>
-<pre class="sample">
-<div class="sample_command">$ python while_loop.py</div>
-<p>10<br />
-9<br />
-8<br />
-7<br />
-6<br />
-5<br />
-4<br />
-3<br />
-2<br />
-1<br />
-<span class="caps">HAPPY</span> <span class="caps">NEW</span> <span class="caps">YEAR</span>!<br />
-</pre></p>
 <h2>Advanced: List comprehension</h2>
 <p>To create a new list in one line, use list comprehension</p>
 <h3 class="file-heading"><em>one_line.py</em></h3>
