--- a/lab_03.html
+++ b/lab_03.html
@@ -158,9 +158,9 @@ data directory: /Users/bea/Development/polyglot-course/polyglot/cohort-1/data<br
 <p>1. Create a file called <code>lecture_01_lab_f03_file_io.py</code>. This is where you will store all your code</p>
 <p>2. Read and print out the file loremipsum.txt</p>
 <p>3.</p>
-<p>In this program, you will read everything within loremipsum.txt, add the new paragraph below and write it to a new file called loremipsum_extended.txxt</p>
+<p>In this program, you will read everything within loremipsum.txt, add the new paragraph below and write it to a new file called loremipsum_extended.txt. Do not create this file explicitly. Using <code>with</code> and <code>w</code> or <code>w+</code> should be enough.</p>
 <p><code>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</code></p>
-<p>4. You&#8217;ll notice that when you run readlines() on positive.txt above, you&#8217;ll see a new line &#8220;\n&#8221;. Create a positive.txt file within the data folder. Store the output of readlines into a list and remove all the new lines</p>
+<p>4. You&#8217;ll notice that when you run readlines() on positive.txt above, you&#8217;ll see a new line &#8220;\n&#8221;. The positive.txt file should be created and written into the data folder. Do not create this file explicitly. Using <code>with</code> and <code>w</code> or <code>w+</code> should be enough. Store the output of readlines into a list and remove all the new lines</p>
 <p>5. Convert data/employees.csv into a dictionary. The first line in the csv are the keys, the rest are values. Your output should look something like</p>
 <h3 class="file-heading"><em>example_employees_output.py:</em></h3>
 <pre class="file">
