--- a/lab_05.html
+++ b/lab_05.html
@@ -48,7 +48,7 @@
 
       <div id="content" tabindex="-1">
         <h1 class="lab_title"><em>lab 5</em>  Homework Assignment 01</h1>
-<h2>Tweet Sentiment Analyzer.</h2>
+<h2>Tweet Sentiment Analyzer</h2>
 <p>In this program, you will build a rough sentiment analyzer for tweets from complete scratch</p>
 <p>1. Search for two dictionaries online. One with positive words, and one with negative words. Save these into separate files within the data folder.</p>
 <p>2.  Retrieve the Sentiment Analysis dataset.</p>
