--- a/lab_09.html
+++ b/lab_09.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lab 8 - Python 102</title>
+    <title>Lab 9 - Python 102</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="UI.js"></script>
   </head>
 
-  <body data-lab-id="8">
+  <body data-lab-id="9">
     <a href="#content" tabindex="1" class="skip-to-content">
       Skip to content
     </a>
@@ -51,22 +51,20 @@
       </div>
 
       <div id="content" tabindex="-1">
-        <h1 class="lab_title"><em>lab 8</em>  Quiz 01</h1>
-<p>1. Start quiz</p>
-<h3><b>Execute:</b></h3>
-<pre class="instructions">cd ~/Development/polyglot/cohort-1/quizzes</pre>
-<pre class="instructions">jupyter notebook</pre>
-<p>2. Open up <code>quiz_01b_python102.ipynb</code> and begin</p>
+        <h1 class="lab_title"><em>lab 9</em>  Homework Assignment 02</h1>
+<h2>Use functions for Tweet Analyzer</h2>
+<p>Within your tweet analyzer, refactor your code to use functions.</p>
+<h2>Gas station<br />
+Create a gas station class. You must be able to add and remove employees,<br />
+you need to add and take away money, you need to buy and use gas. Think about the attributes and functions you might need to do this.</h2>
         <nav class="foot-navigation">
-      <a href="lab_07.html">
+      <a href="lab_08.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
       Previous
     </a>
   
-      <a href="lab_09.html">
-      <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
-      Next
-    </a>
+  
+    <span></span
   </nav>
 
       </div>
