--- a/lab_03.html
+++ b/lab_03.html
@@ -42,8 +42,9 @@
   <li id="lab_4_link"><a href="lab_04.html">Quiz 01</a></li>
   <li id="lab_5_link"><a href="lab_05.html">Homework Assignment 01</a></li>
   <li id="lab_6_link"><a href="lab_06.html">Functions</a></li>
-  <li id="lab_7_link"><a href="lab_07.html">Quiz 01</a></li>
-  <li id="lab_8_link"><a href="lab_08.html">Homework Assignment 02</a></li>
+  <li id="lab_7_link"><a href="lab_07.html">Classes</a></li>
+  <li id="lab_8_link"><a href="lab_08.html">Quiz 01</a></li>
+  <li id="lab_9_link"><a href="lab_09.html">Homework Assignment 02</a></li>
 
           </ol>
         </nav>
