--- a/lab_06.html
+++ b/lab_06.html
@@ -42,8 +42,9 @@
   <li id="lab_4_link"><a href="lab_04.html">Quiz 01</a></li>
   <li id="lab_5_link"><a href="lab_05.html">Homework Assignment 01</a></li>
   <li id="lab_6_link"><a href="lab_06.html">Functions</a></li>
-  <li id="lab_7_link"><a href="lab_07.html">Quiz 01</a></li>
-  <li id="lab_8_link"><a href="lab_08.html">Homework Assignment 02</a></li>
+  <li id="lab_7_link"><a href="lab_07.html">Classes</a></li>
+  <li id="lab_8_link"><a href="lab_08.html">Quiz 01</a></li>
+  <li id="lab_9_link"><a href="lab_09.html">Homework Assignment 02</a></li>
 
           </ol>
         </nav>
@@ -138,7 +139,11 @@ Hello Queenie<br />
 <p>2. Create a function called <code>add</code> that will add two numbers together</p>
 <p>3. Create a function called <code>just_hello</code> that will only say hello. Will this need a paramter or not?</p>
 <p>4. Create a function called <code>celsius_to_farenheit</code> that will convert celsius to farenheit</p>
-<p>5. You have a list of good words and bad words. Create a function called <code>write_list_to_files</code> that will add a list of words to a file</p>
+<p>5. Create a function to find the max of 3 numbers</p>
+<p>6. Write a function that sums all the numbers of a list</p>
+<p>7. Write a function to reverse a string.</p>
+<p>8. Create a function called add_and_subtract that will add or subtract based on the parameter given which is either a &#8216;+&#8217; or a &#8216;-&#8217;</p>
+<p>9. You have a list of good words and bad words. Create a function called <code>write_list_to_files</code> that will add a list of words to a file</p>
         <nav class="foot-navigation">
       <a href="lab_05.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
