Updated docs to 8062419

--- a/lab_07.html
+++ b/lab_07.html
@@ -70,7 +70,7 @@
             raise ValueError("insufficient funds")
         self.balance -= amount
 
-    def get_balance(self): #are accessor methods needed in Python?
+    def get_balance(self): 
         """check the balance"""
         return self.balance
 
