Updated docs to 8539112

--- a/lab_09.html
+++ b/lab_09.html
@@ -55,8 +55,7 @@
 <h2>Use functions for Tweet Analyzer</h2>
 <p>Within your tweet analyzer, refactor your code to use functions.</p>
 <h2>Gas station<br />
-Create a gas station class. You must be able to add and remove employees,<br />
-you need to add and take away money, you need to buy and use gas. Think about the attributes and functions you might need to do this.</h2>
+p. Create a gas station class. You must be able to add and remove employees, you need to add and take away money, you need to buy and use gas. Think about the attributes and functions you might need to do this.</h2>
         <nav class="foot-navigation">
       <a href="lab_08.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
