--- a/lab_03.html
+++ b/lab_03.html
@@ -45,6 +45,7 @@
   <li id="lab_7_link"><a href="lab_07.html">Classes</a></li>
   <li id="lab_8_link"><a href="lab_08.html">Quiz 01</a></li>
   <li id="lab_9_link"><a href="lab_09.html">Homework Assignment 02</a></li>
+  <li id="lab_10_link"><a href="lab_10.html">Homework Assignment 03</a></li>
 
           </ol>
         </nav>
